--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,10 +13,10 @@
       <mat-icon class="mat-icon-lg">account_circle</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item [routerLink]="['RegisterUser']" >
+      <button mat-menu-item [routerLink]="['register']" >
         Registrar
       </button>
-      <button mat-menu-item [routerLink]="['Login']">
+      <button mat-menu-item [routerLink]="['login']">
         Login
       </button>
     </mat-menu>
