--- a/src/app/user/show-users/show-users.component.html
+++ b/src/app/user/show-users/show-users.component.html
@@ -1,9 +1,9 @@
-<section *ngIf="users.length >0; else noUsers" id="UserSection">
-    <app-user-box class="userBoxes" *ngFor="let user of users " [user]="user"> </app-user-box>
+<section *ngIf="usersToShow.length >0; else noUsers" id="GroupSection">
+    <app-user-box class="userBoxes" *ngFor="let user of usersToShow " [user]="user" (removeUserEvent)="this.removeUser(user)"> </app-user-box>
 </section>
 
 <ng-template #noUsers>
-    <!--     <section id="noUsershowSection">
-        <h1>Sem usuários, Por favor registre ao menos um </h1>
-    </section> -->
+       <section id="noUsershowSection">
+        <h1>Sem usuários, para mostrar </h1>
+    </section> -
 </ng-template>
