--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,25 +5,13 @@
         <button mat-button [routerLink]="['home']">
             <mat-icon>home</mat-icon> Home
         </button>
-        <mat-divider />
-        <p>
-            <mat-icon>user</mat-icon> User
-        </p>
+        <mat-divider/>
         <button mat-button [routerLink]="['users']">
-            Todos os usuários
+            <mat-icon>user</mat-icon> User
         </button>
         <mat-divider />
-
-        <button mat-button [routerLink]="['home']">
-            <mat-icon>task</mat-icon> Atividades
-        </button>
-        <mat-divider />
-        <button mat-button [routerLink]="['register']">
-            <mat-icon>event</mat-icon> calendario
-        </button>
-        <mat-divider />
-
-        <button mat-button disabled>
+        
+        <button mat-button [routerLink]="['groups']">
             <mat-icon>group</mat-icon> Grupos
         </button>
 
