--- a/src/app/user/user-box/user-box.component.html
+++ b/src/app/user/user-box/user-box.component.html
@@ -4,7 +4,8 @@
       <mat-card-title>{{user.nickname}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-        <p>Tarefas: {{user.tasks?.length}}</p>
+        <p>{{user.tasks?.length}} tarefa(s)</p>
+        <p>{{user.groups?.length}} grupo(s)</p>
     </mat-card-content>
   </div>
   <mat-card-actions class="buttonBox">
