--- a/src/app/groups/show-group/show-group.component.html
+++ b/src/app/groups/show-group/show-group.component.html
@@ -1,9 +1,12 @@
-<section *ngIf="groupsToShow.length >0; else noGroups" id="groupSection">
-    <app-group-box class="groupBoxes" *ngFor="let group of groupsToShow " [group]="group" (removeGroupEvent)="this.removeGroup(group)"> </app-group-box>
+<section *ngIf="groupsToShow.length >0; else noGroups" id="GroupSection">
+    <app-group-box class="groupBoxes" *ngFor="let group of groupsToShow " [group]="group"
+        (removeGroupEvent)="this.removeGroup(group)" [isRemovingGroup]="(this.currentUser ==undefined)">
+    </app-group-box>
 </section>
 
 <ng-template #noGroups>
-       <section id="noGroupshowSection">
+    <section id="noGroupshowSection">
         <h1>Sem grupos para mostrar </h1>
     </section>
+    
 </ng-template>
