--- a/src/app/task/show-task/show-task.component.html
+++ b/src/app/task/show-task/show-task.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="userOwner && tasksToShow.length >0; else noTasks" class="taskSection" id="TaskSection">
+<section *ngIf="owner && tasksToShow.length >0; else noTasks" class="taskSection" id="TaskSection">
     <app-task-box class="taskBoxes" *ngFor="let task of tasksToShow " [task]="task"
         (changeTaskStateEvent)="changeTaskState(task)"(removeTaskEvent)="removeTask(task)" (editTaskEvent)="editTask(task)" >
     </app-task-box>
