--- a/src/app/user/show-users/show-users.component.html
+++ b/src/app/user/show-users/show-users.component.html
@@ -1,9 +1,9 @@
-<section *ngIf="usersToShow.length >0; else noUsers" id="GroupSection">
+<section *ngIf="usersToShow.length >0; else noUsers" id="UsersSection">
     <app-user-box class="userBoxes" *ngFor="let user of usersToShow " [user]="user" (removeUserEvent)="this.removeUser(user)"> </app-user-box>
 </section>
 
 <ng-template #noUsers>
        <section id="noUsershowSection">
         <h1>Sem usuários, para mostrar </h1>
-    </section> -
+    </section>
 </ng-template>
