--- a/src/app/groups/group-page/group-page.component.css
+++ b/src/app/groups/group-page/group-page.component.css
@@ -1,87 +1,131 @@
-#toggleCreateTask, #toggleAddMember{
-    color: white;
-    background: #233850;
-    display: flex;
-    height: 10vh;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 0%;
+#toggleCreateTask,
+#toggleAddMember {
+  color: white;
+  background: #233850;
+  display: flex;
+  height: 10vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 0%;
 
 }
 
-#GroupSpaceName{
-    padding: 10px;
-    font-size: 2rem;
+#GroupSpaceName {
+  padding: 10px;
+  font-size: 2rem;
 }
 
 section {
-    width: 100%;
-    margin: 20px auto;
-  }
-  
-  h1 {
-    text-align: center;
-    color: #333;
-  }
-  
-  .showTaskTitle {
-    display: flex;
-    width: 90%;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #f0f0f0;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  h2 {
-    margin: 0;
-    font-size: 1.2em;
-  }
-  
-  .quantyTasksShow {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-  }
-  
-  .app-show-task {
-    border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 10px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Adicione um efeito de transição suave para a quantidade de tarefas mostradas */
-  .quantyTasksShow {
-    transition: background-color 0.3s ease;
-  }
-  
-  /* Efeito de hover suave para a seção */
-  .showTaskTitle:hover {
-    background-color: #e0e0e0;
-  }
-  
-  /* Efeito de hover suave para o título */
-  .showTaskTitle:hover {
-    color: #4caf50;
-  }
-  
-  /* Estilo adicional para a seção ativa */
-  .showTaskTitle.active {
-    background-color: #d4ffd4;
-  }
-  
-  /* Adicione um efeito de transição suave para a visibilidade da tarefa */
-  .app-show-task {
-    transition: opacity 0.3s ease;
-  }
-  
+  width: 100%;
+  margin: 20px auto;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+.showTaskTitle {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.quantyTasksShow,
+.quantyParticipantShow {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.app-show-task {
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Adicione um efeito de transição suave para a quantidade de tarefas mostradas */
+.quantyTasksShow,
+.quantyParticipantShow {
+  transition: background-color 0.3s ease;
+}
+
+/* Efeito de hover suave para a seção */
+.showTaskTitle:hover {
+  background-color: #e0e0e0;
+}
+
+/* Efeito de hover suave para o título */
+.showTaskTitle:hover {
+  color: #4caf50;
+}
+
+/* Estilo adicional para a seção ativa */
+.showTaskTitle.active {
+  background-color: #d4ffd4;
+}
+
+/* Adicione um efeito de transição suave para a visibilidade da tarefa */
+.app-show-task {
+  transition: opacity 0.3s ease;
+}
+
+.participant {
+  margin: 10px;
+  width: 300px;
+  /* Ajuste a largura conforme necessário */
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  /* Evita que o conteúdo ultrapasse a borda do cartão */
+}
+
+.participant .mat-card-header {
+  padding: 15px;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ddd;
+}
+
+.participant .mat-card-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.participant .mat-card-actions {
+  padding: 10px;
+  text-align: right;
+}
+
+.participant button {
+  margin-left: 10px;
+  background-color: #f44336;
+  /* Cor vermelha */
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.participant button:hover {
+  background-color: #e53935;
+  /* Cor vermelha mais escura */
+}
